fix: fixed text overflow again...

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -143,7 +143,7 @@ nav ul li a.active {
   flex: auto;
 }
 
-.post > header > div > h1 {
+.post > header > div {
   word-wrap: break-word;
   max-width: 700px;
 }
